# Onani

./: .deepsource.toml  .dockerignore  .gitignore  .mailmap  AGENTS.md  Dockerfile  Dockerfile.aio  Dockerfile.dev  LICENSE  README.md  app.py  build.debug.sh  build.dev.sh  build.sh  celery_worker.py  cookies.txt  docker-compose.debug.yml  docker-compose.dev.yml  docker-compose.example.yml  docker-compose.yml  dockerfile  dockerfile.debug  dockerfile.dev  dockerfile.worker  entrypoint.debug.sh  entrypoint.sh  entrypoint.worker.sh  flake.nix  generate.py  generate_env.py  generate_env.sh  init_db.py  onani.py  onani.toml.example  pyproject.toml  requirements-dev-extra.txt  requirements-dev.txt  requirements-ml.txt  requirements.txt  run.py
OLD/: onani.py
Onani/: __init__.py  celery_worker.py  config.py  flask_celery.py
OnaniCore/: __init__.py  database.py  exceptions.py  files.py  models.py  permissions.py  post.py  scrapers.py  tag.py  user.py  utils.py
OnaniFrontend/: __init__.py
caddy/: Caddyfile
celery/: dockerfile  dockerfile.dev  entrypoint.dev.sh  entrypoint.sh
defaults/: explicit.json  meta.json
docs/: api.md
dramatiq/: dockerfile  entrypoint.sh
entrypoints/: entrypoint.aio.sh  entrypoint.dev.sh  entrypoint.sh
frontend/: Dockerfile  README.md  index.html  package-lock.json  package.json  vite.config.js
nginx/: cloudflare-sync-ips.sh  dockerfile  nginx.conf  nginx.dev.conf  nginx_main.conf  nginx_sys.conf  nixos.nix
onani/: __init__.py
scrapers/: danbooru.py  e621.py  e_hentai.py  gelbooru.py  giantess_booru.py  hypno_hub.py  konachan.py  (+8 more)
(+578 files in other folders)
