[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "onani"
version = "1.0.0b23"
description = "Booru-style imageboard built with Flask and Vue"
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["onani*"]
exclude = ["tests*", "frontend*", "logs*", "migrations*"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.setuptools.dynamic.optional-dependencies]
dev = { file = ["requirements-dev-extra.txt"] }
ml = { file = ["requirements-ml.txt"] }
